Fix select dropdown on Firefox and Safari browser

--- a/src/scss/components/_select-dropdown.scss
+++ b/src/scss/components/_select-dropdown.scss
@@ -34,13 +34,15 @@
     overflow-y: scroll;
     background-color: $white;
     box-shadow: 0 10px 35px rgba(50,50,93,.1), 0 5px 15px rgba(0,0,0,.07);
-    z-index: 1;
+    z-index: 0;
   }
 
   &.expanded {
     .dropdown-options {
       @extend %animate-slide-down-expanded;
       max-height: 300px;
+      z-index: 1;
+
     }
 
     .dropdown-toggle i {
